update routes and database